--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ video {
   z-index: 2;
   display: flex;
   justify-content: center;
+  background: rgba(255, 255, 255, 0.85);
 }
 
 .input-container {
@@ -132,6 +133,8 @@ li span {
   }
 
   .container {
+    min-width: unset;
+    width: 95vh;
     min-height: 245px;
     padding: 20px;
     margin: 10px;
