--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   position: fixed;
   right: 0;
   bottom: 0;
-  width: 100vh;
+  width: 100vw;
   height: auto;
 }
 
@@ -109,6 +109,7 @@ ul {
 }
 
 li {
+  display: inline-block;
   font-size: 30px;
   list-style-type: none;
   padding: 10px;
@@ -127,6 +128,28 @@ li span {
   top: 60px;
 }
 
+.complete-title {
+  animation: complete 4s infinite;
+}
+
+@keyframes complete {
+  0% {
+    color: rgb(255, 67, 67);
+  }
+  25% {
+    color: rgb(236, 255, 67);
+  }
+  50% {
+    color: rgb(67, 255, 108);
+    transform: scale(1.3);
+  }
+  75% {
+    color: rgb(67, 86, 255);
+  }
+  100% {
+    color: rgb(139, 67, 255);
+  }
+}
 /* Media Query: Large Smartphone (Vertical) */
 @media screen and (max-width: 600px) {
   .video-background {
